fix footer, allSkillsNavMenu z-index

--- a/src/components/allSkillsNavMenu/skillsNavMenu.module.css
+++ b/src/components/allSkillsNavMenu/skillsNavMenu.module.css
@@ -2,6 +2,7 @@
 .skillsColumnContainer {
   display: flex;
   gap: 24px;
+  z-index: 20;
 }
 
 .skillsColumn {
